# jmap

./: Cargo.toml  README.md  dist-workspace.toml
dumper/: Cargo.toml  build.rs
dumper/res/gospel/unreal/: Gospel.toml
dumper/res/gospel/unreal/src/: unreal.gs
dumper/src/: containers.rs  emulation.rs  gospel.rs  header.rs  lib.rs  main.rs  mem.rs  objects.rs  structs.rs  unreal.gs  vtable.rs
dumper/structs/: struct_info_425.json  struct_info_426.json  struct_info_427.json  struct_info_500.json  struct_info_501.json  struct_info_502.json  struct_info_503.json  struct_info_504.json  struct_info_505.json
dynamic_structs/: Cargo.toml
dynamic_structs/src/: lib.rs
headers/: Cargo.toml  test.h
headers/src/: layout.rs  main.rs  parser.rs
jmap/: Cargo.toml
jmap/src/: lib.rs
jmap_dumper/: Cargo.toml
jmap_dumper/src/: containers.rs  header.rs  lib.rs  main.rs  mem.rs  objects.rs  proc_name.rs  structs.rs  unreal.gs  vtable.rs
jmap_dumper/unreal/src/: archive.gs  containers.gs  core.gs  objects.gs  package.gs  properties.gs  unreal.gs  uobjectarray.gs
pdb_dumper/: Cargo.toml  UObjectBase  out.json  struct_info.json  struct_info_427.json
pdb_dumper/src/: main.rs
process_dumper/: Cargo.toml
process_dumper/src/: main.rs
src/: containers.rs  lib.rs
ue_binja/: Cargo.toml
ue_binja/src/: lib.rs
ue_reflection/: Cargo.toml
ue_reflection/src/: lib.rs
usmap/: Cargo.toml
usmap/src/: compression.rs  gen.rs  lib.rs  main.rs
usmap/tests/: drg.usmap
