[package]
name = "ue-containers"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.94"
bitflags = { version = "2.6.0", features = ["serde"] }
bytemuck = "1.21.0"
derive-where = "1.2.7"
patternsleuth = { git = "https://github.com/trumank/patternsleuth", version = "0.1.0", features = ["image-pe", "process-external"] }
pretty-hex = "0.4.1"
read-process-memory = "0.1.6"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
