[workspace]
resolver = "2"
members = ["dumper", "ue_reflection", "pdb_dumper", "dynamic_structs", "usmap", "ue_binja"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["trumank"]
repository = "https://github.com/trumank/ue-containers"
homepage = "https://github.com/trumank/ue-containers"
description = "Unreal Engine core reflection/container stuff"
keywords = ["unreal-engine"]
license = "MIT"

[profile.release]
debug = true

[workspace.dependencies]
bitflags = "2.6.0"
bytemuck = "1.21.0"
clap = { version = "4.5.31", features = ["derive"] }
derive-where = "1.2.7"
patternsleuth_image = { git = "https://github.com/trumank/patternsleuth", branch = "refactor" }
patternsleuth_resolvers = { git = "https://github.com/trumank/patternsleuth", branch = "refactor" }
pretty-hex = "0.4.1"
read-process-memory = "0.1.6"
serde = "1.0.216"
serde_json = "1.0.134"
ser-hex = { git = "https://github.com/trumank/ser-hex.git" }
anyhow = "1.0.95"
