[workspace]
resolver = "2"
members = ["dumper", "ue_reflection", "usmap", "ue_binja"]
default-members = ["dumper", "ue_reflection", "usmap"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["trumank"]
repository = "https://github.com/trumank/ue-containers"
homepage = "https://github.com/trumank/ue-containers"
description = "Unreal Engine core reflection/container stuff"
keywords = ["unreal-engine"]
license = "MIT"

[profile.release]
debug = true

[workspace.dependencies]
bitflags = "2.9.4"
bytemuck = "1.23.2"
clap = { version = "4.5.48", features = ["derive"] }
derive-where = "1.6.0"
patternsleuth = { git = "https://github.com/trumank/patternsleuth" }
pretty-hex = "0.4.1"
read-process-memory = "0.1.6"
serde = "1.0.227"
serde_json = "1.0.145"
ser-hex = { git = "https://github.com/trumank/ser-hex.git" }
anyhow = "1.0.100"
