[package]
name = "dumper"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
bytemuck.workspace = true
clap.workspace = true
derive-where.workspace = true
flate2 = "1.1.2"
gospel-compiler = { version = "0.1.0", git = "https://github.com/trumank/gospel" }
gospel-typelib = { version = "0.1.0", git = "https://github.com/trumank/gospel" }
gospel-vm = { version = "0.1.0", git = "https://github.com/trumank/gospel" }
memmap2 = "0.9.5"
ordered-float = "5.0.0"
ordermap = "0.5.5"
patternsleuth_image = { workspace = true, features = ["image-pe", "process-external"] }
patternsleuth_resolvers = { workspace = true, features = [] }
pretty-hex.workspace = true
read-process-memory.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
ue_reflection = { version = "0.1.0", path = "../ue_reflection" }
usmap = { version = "0.1.0", path = "../usmap" }
