[package]
name = "dumper"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
bytemuck.workspace = true
clap.workspace = true
derive-where.workspace = true
flate2 = "1.1.2"
# gospel-bindings-gen.git = "https://github.com/trumank/gospel"
# gospel-compiler.git = "https://github.com/trumank/gospel"
# gospel-runtime.git = "https://github.com/trumank/gospel"
# gospel-typelib.git = "https://github.com/trumank/gospel"
# gospel-vm.git = "https://github.com/trumank/gospel"

gospel-bindings-gen.path = "../../gospel/gospel-bindings-gen"
gospel-compiler.path = "../../gospel/gospel-compiler"
gospel-runtime.path = "../../gospel/gospel-runtime"
gospel-typelib.path = "../../gospel/gospel-typelib"
gospel-vm.path = "../../gospel/gospel-vm"

memmap2 = "0.9.5"
minidump = "0.26.0"
ordered-float = "5.0.0"
ordermap = "0.5.5"
patternsleuth = { workspace = true, features = ["image-pe", "process-external"] }
pretty-hex.workspace = true
read-process-memory.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
ue_reflection = { version = "0.1.0", path = "../ue_reflection" }
usmap = { version = "0.1.0", path = "../usmap" }

[build-dependencies]
# gospel-bindings-gen.git = "https://github.com/trumank/gospel"
gospel-bindings-gen.path = "../../gospel/gospel-bindings-gen"
