[package]
name = "dynamic_structs"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
