[package]
name = "pdb_dumper"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
dynamic_structs = { version = "0.1.0", path = "../dynamic_structs" }
getopts = "0.2.21"
pdb = "0.8.0"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
