[package]
name = "ue_binja"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow.workspace = true
binaryninja = {git = "https://github.com/Vector35/binaryninja-api.git", branch = "dev"}
log = "0.4.28"
serde_json.workspace = true
jmap = { version = "0.1.0", path = "../jmap" }
